--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
-Theme Name: Crescendo
-Theme URI: 
+Theme Name: Crescendo 
+GitHub Theme URI: cdoug88/Crescendo
+GitHub Theme URI: https://github.com/cdoug88/Crescendo
 Author: CityLine Creative
 Author URI: https://citylinecreative.com/
 Description: Custom CMS created by CityLine Creative
