--- a/admin.css
+++ b/admin.css
@@ -18,7 +18,7 @@ span.vers.comment-grey-bubble {
 }
 #adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
     width: 160px;
-    background-color: #212121;
+    background-color: red;
 	
 }
 li#wp-admin-bar-wp-logo {
