--- a/admin.css
+++ b/admin.css
@@ -18,7 +18,7 @@ span.vers.comment-grey-bubble {
 }
 #adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
     width: 160px;
-    background-color: red;
+    background-color: #212121;
 	
 }
 li#wp-admin-bar-wp-logo {
@@ -61,7 +61,7 @@ li#wp-admin-bar-wp-logo {
 
 #adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
     width: 100px;
-    background-color: #05192d;
+    background-color: red;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
