--- a/admin.css
+++ b/admin.css
@@ -3,6 +3,7 @@ bottom: 40px!important;
 position: fixed!important;
 background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
 background-repeat: no-repeat;
+left: 24px;
 }
 
 #wpcontent, #wpfooter {
