--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ GitHub Theme URI: cdoug88/Crescendo
 Author: CityLine Creative
 Author URI: https://citylinecreative.com/
 Description: Custom CMS created by CityLine Creative
-Version: 1.0.36
+Version: 1.0.37
 License: GNU General Public License
 License URI: https://www.gnu.org/licenses/gpl.html
 Tags: 
 
 
-CityLine Creative Theme © 2018 
+CityLine Creative © 2018 
 
 */
 
