--- a/admin.css
+++ b/admin.css
@@ -8,6 +8,7 @@ left: 24px;
 li#toplevel_page_crec-logo:hover {
 background: transparent!important;
 background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
+background-repeat: no-repeat;
 }
 #wpcontent, #wpfooter {
     margin-left: 100px;
