--- a/admin.css
+++ b/admin.css
@@ -1,6 +1,6 @@
 li#toplevel_page_crec-logo {
-bottom: 40px!important;
-position: fixed!important;
+/* bottom: 40px!important;
+position: fixed!important; */
 background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
 background-repeat: no-repeat;
 left: 24px;
@@ -8,7 +8,7 @@ left: 24px;
 li#toplevel_page_crec-logo:hover {
 background: transparent!important;
 background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
-background-repeat: no-repeat;
+background-repeat: no-repeat!important;
 }
 #wpcontent, #wpfooter {
     margin-left: 100px;
