--- a/admin.css
+++ b/admin.css
@@ -1,11 +1,10 @@
 li#toplevel_page_crec-logo {
-/* bottom: 40px!important;
-position: fixed!important; */
-background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
-background-repeat: no-repeat;
-left: 24px;
+    background-image: url(https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg)!important;
+    background-repeat: no-repeat!important;
+    left: 28px!important;
+    top: -7px!important;
 }
-li#toplevel_page_crec-logo:hover {
+li#toplevel_page_crec-logo:hover, li#toplevel_page_crec-logo:active {
 background: transparent!important;
 background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
 background-repeat: no-repeat!important;
