--- a/admin.css
+++ b/admin.css
@@ -1,3 +1,6 @@
+.postbox {
+border: none!important;	
+}
 li#toplevel_page_crec-logo {
     background-image: url(https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg)!important;
     background-repeat: no-repeat!important;
