--- a/admin.css
+++ b/admin.css
@@ -13,6 +13,12 @@
 	justify-content: center;
 	align-items: center;
 }
+.dash-btns .dashicons, .dash-btns .dashicons-before:before {
+	width: 50px;
+    height: 61px;
+    font-size: 52px;
+    color: black;
+}
 #dashboard-widgets .inside h3, #dashboard-widgets .inside h4 {
 	font-weight: 600;
 }
