--- a/admin.css
+++ b/admin.css
@@ -2,11 +2,17 @@
 	font-weight: 600;
 }
 .btn-one, .btn-two, .btn-three {
-	margin: 15px;
+	margin: 25px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+}
+p {
+    font-size: 12px;
+    line-height: 1.5;
+    margin: 0;
+    padding-bottom: 20px;
 }
 .dash-btns {
 	display:flex;
