--- a/admin.css
+++ b/admin.css
@@ -8,11 +8,12 @@
 	align-items: center;
 	flex-direction: column;
 }
-p {
+.dash-btns p {
     font-size: 12px;
     line-height: 1.5;
     margin: 0;
     padding-bottom: 20px;
+    text-align: center;
 }
 .dash-btns {
 	display:flex;
@@ -27,6 +28,7 @@ p {
 }
 #dashboard-widgets .inside h3, #dashboard-widgets .inside h4 {
 	font-weight: 600;
+	text-align: center;
 }
 .postbox {
 	border: none!important;	
