--- a/admin.css
+++ b/admin.css
@@ -26,7 +26,7 @@
     font-size: 52px;
     color: black;
 }
-#dashboard-widgets .inside h3, #dashboard-widgets .inside h4 {
+#dashboard-widgets .inside h3 {
 	font-weight: 600;
 	text-align: center;
 }
