--- a/admin.css
+++ b/admin.css
@@ -34,7 +34,7 @@
 	border: none!important;	
 }
 li#toplevel_page_crec-logo {
-    background-image: url(https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg)!important;
+    background-image: url('https://citylinecreative.com/wp-content/themes/Crescendo/images/crec.svg')!important;
     background-repeat: no-repeat!important;
     left: 28px!important;
     top: -7px!important;
