--- a/admin.css
+++ b/admin.css
@@ -24,7 +24,7 @@
 	width: 50px;
     height: 61px;
     font-size: 52px;
-    color: black;
+    color: #ad370a;
 }
 #dashboard-widgets .inside h3 {
 	font-weight: 600;
