--- a/admin.css
+++ b/admin.css
@@ -1,3 +1,6 @@
+div#postbox-container-1 {
+    width: 100%!important;
+}
 #dashboard-widgets .inside h3, #dashboard-widgets .inside h4 {
 	font-weight: 600;
 }
