--- a/admin.css
+++ b/admin.css
@@ -49,7 +49,7 @@ a:hover, a:active, a:visited {
 , .wrap .page-title-action:hover {
 	background: #0d8acd;
 }
-#wpbody-content #dashboard-widgets .postbox-container {
+#wpbody-content #dashboard-widgets .postbox-container-1 {
     width: 100%!important;
 }
 #dashboard-widgets .inside h3, #dashboard-widgets .inside h4 {
