--- a/admin.css
+++ b/admin.css
@@ -1,3 +1,13 @@
+input {
+	min-height: 40px;
+	
+}
+#wpbody-content .metabox-holder {
+    padding-top: 10px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
 #wp-content-media-buttons a.button.wpforms-insert-form-button {
     display: none;
 }
