--- a/home.css
+++ b/home.css
@@ -3,10 +3,20 @@ html {
 }
 .site-header {
 	height:100vh;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat;position: relative;
 }
 .black-bar {
 	width: 100%;
 	height: 40px;
 	background: #2c2c2c;
+}
+.tagline {
+	position: absolute;
+	content:'';
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+	width: 100%;
+	height: 100%;
 }
