--- a/home.css
+++ b/home.css
@@ -19,6 +19,9 @@ html {
 	color: white;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .post-edit-link {
 	display: none;
