--- a/home.css
+++ b/home.css
@@ -22,7 +22,11 @@ html {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	
 } 
+.tagline h1 {
+	font-size: 35px;
+}
 .post-edit-link {
 	display: none;
 }
