--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	color: white; 
-	font: 9px;
+	font-size: 9px;
 }
 #footer {
 	width: 100%;
