--- a/login.css
+++ b/login.css
@@ -1,6 +1,15 @@
 body {
 	background: #05192d;
+	position: relative;	
 }
+body.login:after {
+	background: url('/wp-content/themes/Crescendo/images/line2.png');
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	content: '';
+}
+
 #nav, #backtoblog {
 	display: none;
 }
