changed includes to root
moved includes to cityline website

--- a/admin.css
+++ b/admin.css
@@ -1,3 +1,10 @@
+
+span.collapse-button-label, .collapse-button-icon {
+    display: none!important;
+}
+#adminmenu li>a.menu-top:focus {
+	background: transparent;
+	}
 #login form p {
 
     color: white!important;
